# EmulationStation

./: .directory  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CREDITS.md  DEVNOTES.md  GAMELISTS.md  LICENSE.md  Makefile  Makefile.common  Makefile.x86  README.md  SYSTEMOPTIONS.md  SYSTEMS.md  THEMES.md  cec-keypresses.sh  changelog.txt  emulationstation.sh  opensans_license.txt  systems.cfg
ci/: macos.sh
es-app/: CMakeLists.txt
es-app/src/: CollectionSystemManager.cpp  CollectionSystemManager.h  ESException.h  EmulationStation.aps  EmulationStation.h  FileData.cpp  FileData.h  FileFilterIndex.cpp  FileFilterIndex.h  FileSorts.cpp  FileSorts.h  Gamelist.cpp  Gamelist.h  GamelistDB.cpp  GamelistDB.h  MameNameMap.cpp  MetaData.cpp  MetaData.h  NetworkThread.cpp  NetworkThread.h  PlatformId.cpp  PlatformId.h  RecalboxSystem.cpp  RecalboxSystem.h  RetroboxSystem.cpp  RetroboxSystem.h  ScraperCmdLine.cpp  SystemData.cpp  SystemData.h  SystemManager.cpp  SystemManager.h  SystemOption.cpp  SystemOption.h  SystemOptionValue.cpp  SystemOptionValue.h  SystemScreenSaver.cpp  SystemScreenSaver.h  VolumeControl.cpp  VolumeControl.h  main.cpp
es-app/src/animations/: LaunchAnimation.h  MoveCameraAnimation.h
es-app/src/components/: AsyncReqComponent.cpp  AsyncReqComponent.h  FileSystemSelectorComponent.cpp  FileSystemSelectorComponent.h  RatingComponent.cpp  RatingComponent.h  ScraperSearchComponent.cpp  ScraperSearchComponent.h  TextListComponent.h
es-app/src/guis/: GuiCollectionSystemsOptions.cpp  GuiCollectionSystemsOptions.h  GuiFastSelect.cpp  GuiFastSelect.h  GuiGameScraper.cpp  GuiGameScraper.h  GuiGamelistFilter.cpp  GuiGamelistFilter.h  GuiGamelistOptions.cpp  GuiGamelistOptions.h  GuiGeneralScreensaverOptions.cpp  GuiGeneralScreensaverOptions.h  GuiInfoPopup.cpp  GuiInfoPopup.h  GuiLoading.cpp  GuiLoading.h  GuiMenu.cpp  GuiMenu.h  GuiMetaDataEd.cpp  GuiMetaDataEd.h  GuiRandomCollectionOptions.cpp  GuiRandomCollectionOptions.h  GuiRefreshDatabase.cpp  GuiRefreshDatabase.h  GuiRomsManager.cpp  GuiRomsManager.h  GuiScraperMulti.cpp  GuiScraperMulti.h  GuiScraperStart.cpp  GuiScraperStart.h  GuiScreensaverOptions.cpp  GuiScreensaverOptions.h  GuiSettings.cpp  GuiSettings.h  GuiSlideshowScreensaverOptions.cpp  GuiSlideshowScreensaverOptions.h  GuiUpdate.cpp  GuiUpdate.h  GuiVideoScreensaverOptions.cpp  GuiVideoScreensaverOptions.h
es-app/src/scrapers/: GamesDBJSONScraper.cpp  GamesDBJSONScraperResources.cpp  GamesDBListScraper.cpp  GamesDBListScraper.h  GamesDBScraper.cpp  GamesDBScraper.h  GamesDBShaScraper.cpp  GamesDBShaScraper.h  MamedbScraper.cpp  MamedbScraper.h  ROMHasher.cpp  ROMHasher.h  Scraper.cpp  Scraper.h  ScreenScraper.cpp  ScreenScraper.h  TheArchiveScraper.cpp  TheArchiveScraper.h
es-app/src/views/: SystemView.cpp  SystemView.h  UIModeController.cpp  UIModeController.h  ViewController.cpp  ViewController.h
es-app/src/views/gamelist/: BasicGameListView.cpp  BasicGameListView.h  DetailedGameListView.cpp  DetailedGameListView.h  FanartGameListView.cpp  FanartGameListView.h  GridGameListView.cpp  GridGameListView.h  IGameListView.cpp  IGameListView.h  ISimpleGameListView.cpp  ISimpleGameListView.h  VideoGameListView.cpp  VideoGameListView.h
es-core/: CMakeLists.txt
es-core/src/: ArchiveManager.cpp  ArchiveManager.h  AsyncHandle.h  AudioManager.cpp  AudioManager.h  CECInput.cpp  CECInput.h  GuiComponent.cpp  GuiComponent.h  HelpStyle.cpp  HelpStyle.h  HttpReq.cpp  HttpReq.h  ImageIO.cpp  ImageIO.h  InputConfig.cpp  InputConfig.h  InputManager.cpp  InputManager.h  Locale.h  Log.cpp  Log.h  MameNames.cpp  MameNames.h  Music.cpp  Music.h  PowerSaver.cpp  PowerSaver.h  RecalboxConf.cpp  RecalboxConf.h  Renderer.h  Renderer_draw_gl.cpp  Renderer_init.cpp  Renderer_init_sdlgl.cpp  RetroboxSystem.cpp  RetroboxSystem.h  Scripting.cpp  Scripting.h  Settings.cpp  Settings.h  (+18 more)
es-core/src/animations/: Animation.h  AnimationController.cpp  AnimationController.h  LambdaAnimation.h
es-core/src/components/: AnimatedImageComponent.cpp  AnimatedImageComponent.h  BusyComponent.cpp  BusyComponent.h  ButtonComponent.cpp  ButtonComponent.h  ComponentGrid.cpp  ComponentGrid.h  ComponentList.cpp  ComponentList.h  DateTimeComponent.cpp  DateTimeComponent.h  DateTimeEditComponent.cpp  DateTimeEditComponent.h  GridTileComponent.cpp  GridTileComponent.h  HelpComponent.cpp  HelpComponent.h  IList.h  ImageComponent.cpp  ImageComponent.h  ImageGridComponent.h  MediaComponent.cpp  MediaComponent.h  MenuComponent.cpp  MenuComponent.h  NinePatchComponent.cpp  NinePatchComponent.h  OptionListComponent.h  ScrollableContainer.cpp  ScrollableContainer.h  SliderComponent.cpp  SliderComponent.h  SwitchComponent.cpp  SwitchComponent.h  TextComponent.cpp  TextComponent.h  TextEditComponent.cpp  TextEditComponent.h  VideoComponent.cpp  (+5 more)
es-core/src/guis/: GuiDetectDevice.cpp  GuiDetectDevice.h  GuiInputConfig.cpp  GuiInputConfig.h  GuiMsgBox.cpp  GuiMsgBox.h  GuiTextEditPopup.cpp  GuiTextEditPopup.h
es-core/src/math/: Matrix3x3f.h  Matrix4x4f.h  Misc.cpp  Misc.h  Rotation3x3f.h  Scale3x3f.h  Transform4x4f.cpp  Transform4x4f.h  Vector2f.cpp  Vector2f.h  Vector2i.h  Vector3f.cpp  Vector3f.h  Vector4f.cpp  Vector4f.h
es-core/src/renderers/: Renderer.cpp  Renderer.h  Renderer_GL14.cpp  Renderer_GL21.cpp  Renderer_GLES10.cpp  Renderer_GLES20.cpp
es-core/src/resources/: Font.cpp  Font.h  ResourceManager.cpp  ResourceManager.h  SVGResource.cpp  TextureData.cpp  TextureData.h  TextureDataManager.cpp  TextureDataManager.h  TextureResource.cpp  TextureResource.h  VideoResource.cpp  VideoResource.h
es-core/src/utils/: FileSystemUtil.cpp  FileSystemUtil.h  StringUtil.cpp  StringUtil.h  TimeUtil.cpp  TimeUtil.h
locale/: CMakeLists.txt  emulationstation2.pot  pomerge.sh
locale/en/LC_MESSAGES/: emulationstation2.po
locale/fr_FR/LC_MESSAGES/: emulationstation2.mo  emulationstation2.po  messages.mo  messages.po
locale/lang/de/LC_MESSAGES/: emulationstation2.po
locale/lang/en/LC_MESSAGES/: emulationstation2.po
locale/pt_PT/LC_MESSAGES/: emulationstation2.mo  emulationstation2.po
(+432 files in other folders)
